[package]
name = "version_tag"
version = "0.4.4-alpha.0"
authors = ["Dany Laporte <dany_laporte@hotmail.com>"]
edition = "2018"
publish = false

[features]
default = []
postgres = ["postgres-types"]
shared-tag = ["rand", "serde"]

[dependencies]
postgres-types = { version = "0.2", optional = true }
rand = { version = "^0.8", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
