[package]
name = "version_tag"
version = "0.4.4"
authors = ["Dany Laporte <dany_laporte@hotmail.com>"]
edition = "2018"
publish = false

[features]
default = []
shared-tag = ["rand", "serde"]

[dependencies]
rand = { version = "^0.7", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
