[package]
name = "version_tag"
version = "0.5.1-alpha.0"
authors = ["Dany Laporte <dany_laporte@hotmail.com>"]
edition = "2018"
publish = false

[features]
default = []
shared-tag = ["rand", "serde", "serde_with"]

[dependencies]
rand = { version = "0.8", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_with = { version = "3", features = ["base64"], optional = true }

[dev-dependencies]
serde_json = "1"
